--- a/doc/static/custom.css
+++ b/doc/static/custom.css
@@ -5,7 +5,7 @@
     padding-left: 3pt;
     content: "Example";
     background: #6ab0de;
-    color: #ffffff
+    color: #ffffff;
 }
 
 .api-code>div[class^='highlight']:before {
@@ -14,9 +14,24 @@
     padding-bottom: 2pt;
     padding-left: 3pt;
     content: "API";
-    background: #e0e0e0
+    background: #e0e0e0;
 }
 
 .api-code>div[class^='highlight'] {
-    background: #f4f4f4
+    background: #f4f4f4;
+}
+
+li>p:last-child {
+    padding-bottom: 2ex;
+}
+
+table.docutils td {
+    vertical-align: top !important;
+}
+
+@media screen and (min-width: 40em) {
+    .wy-table-responsive table td,
+    .wy-table-responsive table th {
+	white-space: normal;
+    }
 }
